# learnCUDA

./: .gitignore  CmakeLists.txt  README.md
TP1/: CmakeLists.txt
TP1/Ex1/: CMakeLists.txt
TP1/Ex2/src/: main.cu  student.cu
TP1/Ex3/: CMakeLists.txt
TP1/Ex3/include/: student.hpp
TP1/Ex3/src/: student.cu
TP1/Ex4/include/: common.hpp
TP1/Ex4/src/: main.cu
TP2/: resultat.md
TP2/Ex1/src/: student.cu
TP2/Ex2/src/: student.cu
TP2/Ex3/: CMakeLists.txt
TP2/Ex3/src/: student.cu
TP2/Ex4/src/: student.cu
TP2/commonSrc/: chronoGPU.cu  common.cpp  main.cu
TP2/include/: chronoCPU.hpp  chronoGPU.hpp  common.hpp  conv_utils.hpp  student.hpp
TP2/src/: student.cu  studentExo01.cu  studentExo02.cu  studentExo03.cu
TP3/: TP3_GPGPU.tgz
TP3/Ex1/: student.cu
TP3/Ex2/: student.cu
TP3/Ex3/: student.cu
TP3/Ex4/: CMakeLists.txt  student.cu
TP3/Ex5/: student.cu
TP3/commonSrc/: common.cpp  main.cu
TP3/include/: common.hpp  student.hpp
